--- a/Campagn/index.html
+++ b/Campagn/index.html
@@ -22,7 +22,7 @@
       <div class="tagline">Different is not wrong</div>
       <h1 class="intro_h1">Take care of<br>your mental health</h1>
       <p>
-        Check your stress levels quickly and easily, and restore your mental wellbeing.
+        Check your stress levels quickly and easily,<br>and restore your mental wellbeing.
       </p>
       <div class="btn-row">
         <button class="primary" id="btn-start">Start Stress Check</button>
@@ -261,9 +261,6 @@
                   <span>Faster</span>
                 </div>
               </div>
-              <div class="distribution-insight" id="gauge-insight">
-                Your heart rhythm is being compared to the crowd.
-              </div>
             </div>
 
           </div>
@@ -317,14 +314,17 @@
 
         <!-- PAGE 7: Ending -->
         <div class="result-slide" id="slide-7">
-          <div class="slide-content center-text">
+          <canvas id="ending-canvas"></canvas>
+          <div class="slide-content center-text" style="position: relative; z-index: 1;">
             <div class="ending-message">
-              <p>Different opinions.<br>Different fears.<br>Different sides.</p>
-              <p style="margin-top: 24px;">Yet every heart here moved inside the same human range.</p>
-              <h2 style="margin-top: 40px; font-size: 28px; color: var(--primary);">Different is not wrong.</h2>
+              <p class="ending-line" style="opacity: 0;">Different opinions.<br>Different fears.<br>Different sides.</p>
+              <p class="ending-line" style="margin-top: 24px; opacity: 0;">Yet every heart here moved inside the same
+                human range.</p>
+              <h2 class="ending-line" style="margin-top: 40px; font-size: 28px; color: var(--primary); opacity: 0;">
+                Different is not wrong.</h2>
             </div>
 
-            <button class="btn-primary" onclick="location.reload()" style="margin-top: 40px;">
+            <button class="btn-primary ending-line" onclick="location.reload()" style="margin-top: 40px; opacity: 0;">
               Try Again
             </button>
           </div>
@@ -784,6 +784,8 @@
             animateGauge();
           } else if (index === 5) { // Neighborhood
             animateNeighborhood();
+          } else if (index === 7) { // Ending
+            animateEnding();
           }
 
         } else {
@@ -1260,7 +1262,130 @@
       };
       window.requestAnimationFrame(step);
     }
-    // Initialize
+
+    // --- ENDING PAGE ANIMATION ---
+    let endingAnimId;
+    class EndingParticle {
+      constructor(canvasWidth, canvasHeight) {
+        this.cw = canvasWidth;
+        this.ch = canvasHeight;
+        this.x = Math.random() * this.cw;
+        this.y = Math.random() * this.ch;
+        this.size = Math.random() * 2 + 1;
+        this.color = `rgba(${Math.floor(Math.random() * 50 + 200)}, ${Math.floor(Math.random() * 100 + 100)}, 255, ${Math.random() * 0.5 + 0.3})`; // Blueish
+
+        // Phase 1: Random float
+        this.vx = (Math.random() - 0.5) * 0.5;
+        this.vy = (Math.random() - 0.5) * 0.5;
+
+        // Target for Phase 2 (Center)
+        const angle = Math.random() * Math.PI * 2;
+        const radius = Math.random() * 100; // Cluster radius
+        this.tx = this.cw / 2 + Math.cos(angle) * radius;
+        this.ty = this.ch / 2 + Math.sin(angle) * radius;
+      }
+
+      update(phase, time) {
+        if (phase === 'float') {
+          this.x += this.vx;
+          this.y += this.vy;
+          if (this.x < 0 || this.x > this.cw) this.vx *= -1;
+          if (this.y < 0 || this.y > this.ch) this.vy *= -1;
+        } else if (phase === 'gather') {
+          // Move towards target
+          this.x += (this.tx - this.x) * 0.05;
+          this.y += (this.ty - this.y) * 0.05;
+        } else if (phase === 'pulse') {
+          // Pulse effect
+          const pulse = Math.sin(time * 0.005) * 10;
+          this.x += (this.tx - this.x) * 0.1 + (Math.random() - 0.5);
+          this.y += (this.ty - this.y) * 0.1 + (Math.random() - 0.5);
+        } else if (phase === 'disperse') {
+          // Float upward
+          this.y -= Math.random() * 2 + 1;
+          this.x += (Math.random() - 0.5) * 1;
+          this.color = `rgba(255, ${Math.floor(Math.random() * 150 + 100)}, 50, ${Math.random() * 0.5})`; // Orange/Yellow
+        }
+      }
+
+      draw(ctx) {
+        ctx.beginPath();
+        ctx.arc(this.x, this.y, this.size, 0, Math.PI * 2);
+        ctx.fillStyle = this.color;
+        ctx.fill();
+      }
+    }
+
+    function animateEnding() {
+      const canvas = document.getElementById('ending-canvas');
+      const ctx = canvas.getContext('2d');
+      const container = document.getElementById('slide-7'); // Ensure correct container
+      canvas.width = container.offsetWidth;
+      canvas.height = container.offsetHeight;
+
+      const particles = [];
+      for (let i = 0; i < 600; i++) {
+        particles.push(new EndingParticle(canvas.width, canvas.height));
+      }
+
+      let startTime = Date.now();
+      let phase = 'float'; // float, gather, pulse, disperse
+
+      // Text Elements
+      const lines = document.querySelectorAll('.ending-line');
+
+      function loop() {
+        const now = Date.now();
+        const elapsed = now - startTime;
+
+        // Phase Logic
+        if (elapsed < 2000) phase = 'float';
+        else if (elapsed < 5000) phase = 'gather';
+        else if (elapsed < 11000) phase = 'pulse'; // Long pulse for text
+        else phase = 'disperse';
+
+        // Text Fade-in Logic (during pulse)
+        if (phase === 'pulse') {
+          if (elapsed > 5500) lines[0].style.opacity = 1; // Line 1
+          if (elapsed > 7000) lines[1].style.opacity = 1; // Line 2
+          if (elapsed > 8500) lines[2].style.opacity = 1; // Line 3
+          if (elapsed > 10000) lines[3].style.opacity = 1; // Button
+        }
+
+        ctx.clearRect(0, 0, canvas.width, canvas.height);
+
+        // Pulse Circle (Background)
+        if (phase === 'pulse') {
+          const pulseScale = (Math.sin(now * 0.003) + 1) * 0.5; // 0 to 1
+          const radius = 100 + pulseScale * 50;
+          const gradient = ctx.createRadialGradient(canvas.width / 2, canvas.height / 2, 0, canvas.width / 2, canvas.height / 2, radius * 2);
+          gradient.addColorStop(0, 'rgba(67, 97, 238, 0.1)'); // Blue
+          gradient.addColorStop(0.5, 'rgba(255, 165, 0, 0.1)'); // Orange
+          gradient.addColorStop(1, 'rgba(255, 255, 255, 0)');
+
+          ctx.beginPath();
+          ctx.arc(canvas.width / 2, canvas.height / 2, radius * 2, 0, Math.PI * 2);
+          ctx.fillStyle = gradient;
+          ctx.fill();
+        }
+
+        particles.forEach(p => {
+          p.update(phase, now);
+          p.draw(ctx);
+        });
+
+        if (phase !== 'end') endingAnimId = requestAnimationFrame(loop);
+      }
+
+      // Reset text opacity
+      lines.forEach(l => {
+        l.style.opacity = 0;
+        l.style.transition = 'opacity 1.5s ease';
+      });
+
+      cancelAnimationFrame(endingAnimId);
+      loop();
+    }
     show(intro);
     // generateResult(75); // Force result screen
     // show(rScreen);
