--- a/Campagn/index.html
+++ b/Campagn/index.html
@@ -1272,11 +1272,12 @@
         this.x = Math.random() * this.cw;
         this.y = Math.random() * this.ch;
         this.size = Math.random() * 2 + 1;
-        this.color = `rgba(${Math.floor(Math.random() * 50 + 200)}, ${Math.floor(Math.random() * 100 + 100)}, 255, ${Math.random() * 0.5 + 0.3})`; // Blueish
+        // Brand Blue: #4361EE -> 67, 97, 238
+        this.color = `rgba(67, 97, 238, ${Math.random() * 0.6 + 0.4})`;
 
-        // Phase 1: Random float
-        this.vx = (Math.random() - 0.5) * 0.5;
-        this.vy = (Math.random() - 0.5) * 0.5;
+        // Phase 1: Random float (Faster)
+        this.vx = (Math.random() - 0.5) * 1.5;
+        this.vy = (Math.random() - 0.5) * 1.5;
 
         // Target for Phase 2 (Center)
         const angle = Math.random() * Math.PI * 2;
@@ -1292,19 +1293,19 @@
           if (this.x < 0 || this.x > this.cw) this.vx *= -1;
           if (this.y < 0 || this.y > this.ch) this.vy *= -1;
         } else if (phase === 'gather') {
-          // Move towards target
-          this.x += (this.tx - this.x) * 0.05;
-          this.y += (this.ty - this.y) * 0.05;
+          // Move towards target (Faster)
+          this.x += (this.tx - this.x) * 0.08;
+          this.y += (this.ty - this.y) * 0.08;
         } else if (phase === 'pulse') {
           // Pulse effect
-          const pulse = Math.sin(time * 0.005) * 10;
+          const pulse = Math.sin(time * 0.008) * 15; // Faster pulse
           this.x += (this.tx - this.x) * 0.1 + (Math.random() - 0.5);
           this.y += (this.ty - this.y) * 0.1 + (Math.random() - 0.5);
         } else if (phase === 'disperse') {
-          // Float upward
-          this.y -= Math.random() * 2 + 1;
-          this.x += (Math.random() - 0.5) * 1;
-          this.color = `rgba(255, ${Math.floor(Math.random() * 150 + 100)}, 50, ${Math.random() * 0.5})`; // Orange/Yellow
+          // Float upward (Faster)
+          this.y -= Math.random() * 3 + 2;
+          this.x += (Math.random() - 0.5) * 2;
+          this.color = `rgba(67, 97, 238, ${Math.random() * 0.5})`; // Fade out blue
         }
       }
 
@@ -1338,29 +1339,28 @@
         const now = Date.now();
         const elapsed = now - startTime;
 
-        // Phase Logic
-        if (elapsed < 2000) phase = 'float';
-        else if (elapsed < 5000) phase = 'gather';
-        else if (elapsed < 11000) phase = 'pulse'; // Long pulse for text
+        // Phase Logic (Faster Timings)
+        if (elapsed < 1000) phase = 'float';
+        else if (elapsed < 3000) phase = 'gather';
+        else if (elapsed < 8000) phase = 'pulse'; // Pulse for 5s
         else phase = 'disperse';
 
-        // Text Fade-in Logic (during pulse)
+        // Text Fade-in Logic (Faster)
         if (phase === 'pulse') {
-          if (elapsed > 5500) lines[0].style.opacity = 1; // Line 1
-          if (elapsed > 7000) lines[1].style.opacity = 1; // Line 2
-          if (elapsed > 8500) lines[2].style.opacity = 1; // Line 3
-          if (elapsed > 10000) lines[3].style.opacity = 1; // Button
+          if (elapsed > 3200) lines[0].style.opacity = 1; // Line 1
+          if (elapsed > 4200) lines[1].style.opacity = 1; // Line 2
+          if (elapsed > 5200) lines[2].style.opacity = 1; // Line 3
+          if (elapsed > 6200) lines[3].style.opacity = 1; // Button
         }
 
         ctx.clearRect(0, 0, canvas.width, canvas.height);
 
         // Pulse Circle (Background)
         if (phase === 'pulse') {
-          const pulseScale = (Math.sin(now * 0.003) + 1) * 0.5; // 0 to 1
+          const pulseScale = (Math.sin(now * 0.005) + 1) * 0.5; // Faster pulse
           const radius = 100 + pulseScale * 50;
           const gradient = ctx.createRadialGradient(canvas.width / 2, canvas.height / 2, 0, canvas.width / 2, canvas.height / 2, radius * 2);
-          gradient.addColorStop(0, 'rgba(67, 97, 238, 0.1)'); // Blue
-          gradient.addColorStop(0.5, 'rgba(255, 165, 0, 0.1)'); // Orange
+          gradient.addColorStop(0, 'rgba(67, 97, 238, 0.2)'); // Brand Blue
           gradient.addColorStop(1, 'rgba(255, 255, 255, 0)');
 
           ctx.beginPath();
@@ -1380,7 +1380,7 @@
       // Reset text opacity
       lines.forEach(l => {
         l.style.opacity = 0;
-        l.style.transition = 'opacity 1.5s ease';
+        l.style.transition = 'opacity 1.0s ease'; // Faster transition
       });
 
       cancelAnimationFrame(endingAnimId);
