Switch camera back to front-facing (user mode)

--- a/Campagn/index.html
+++ b/Campagn/index.html
@@ -527,7 +527,7 @@
       try {
         camStream = await navigator.mediaDevices.getUserMedia({
           video: {
-            facingMode: 'environment',
+            facingMode: 'user',
             width: { ideal: 320 },
             height: { ideal: 240 }
           }
