--- a/Campagn/index.html
+++ b/Campagn/index.html
@@ -324,7 +324,8 @@
                 Different is not wrong.</h2>
             </div>
 
-            <button class="btn-primary ending-line" onclick="resetApp()" style="margin-top: 40px; opacity: 0;">
+            <button id="btn-start" class="btn-primary ending-line" onclick="resetApp()"
+              style="margin-top: 40px; opacity: 0;">
               Try Again
             </button>
           </div>
