Re-apply ending page improvements: SVG drawing animation and layout fixes
- Separate text messages and visual elements into independent containers
- Replace heartline with proper SVG paths from heartline.svg
- Add drawing animation using stroke-dasharray
- Move Try Again button inside visual container for better flow
- Adjust spacing and centering for improved layout

--- a/Campagn/index.html
+++ b/Campagn/index.html
@@ -332,28 +332,36 @@
         <div class="result-slide ending-dark" id="slide-7">
           <div class="ending-overlay"></div>
           <div class="slide-content center-text ending-content" style="position: relative; z-index: 2;">
+            <!-- Text Messages Container - Centered -->
             <div class="ending-message-cinematic">
               <p class="ending-line-cinematic" data-index="0">Different opinions.</p>
               <p class="ending-line-cinematic" data-index="1">Different fears.</p>
               <p class="ending-line-cinematic" data-index="2">Different sides.</p>
               <p class="ending-line-cinematic bridge-text" data-index="3">Yet every heart here moved inside the same
                 human range.</p>
+            </div>
 
+            <!-- Heart Drawing + Final Statement Container - Centered -->
+            <div class="ending-visual-cinematic">
               <!-- Heart Hug Line Drawing -->
               <div class="heart-drawing-wrap ending-line-cinematic" data-index="4">
-                <svg class="heart-hug-svg" viewBox="0 0 640 480" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg class="heart-hug-svg" viewBox="0 0 5726.48 1798" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path class="draw-line"
-                    d="M44.5,386.5 C100,370 180,390 250,388 M265,388 C290,395 345,390 390,360 C450,320 490,300 550,335 C580,360 595,365 580,325 C580,300 600,280 655,240 M270,383 C230,320 200,290 155,270 C130,280 165,310 185,320 M155,275 C175,265 210,270 240,275 M160,290 C190,285 225,295 255,315 M165,310 C180,310 205,325 225,345 M175,330 C200,335 220,350 240,370 M190,350 C205,355 220,370 235,390 M250,385 C220,350 200,310 190,290 C260,275 335,270 375,265 C370,230 340,150 250,145 C180,140 130,195 135,235 C220,245 280,205 305,195 M285,210 C310,200 340,200 365,205 M285,225 C310,220 345,225 375,240 M280,240 C305,240 340,250 365,270 M275,260 C295,265 325,280 350,305"
-                    stroke="white" stroke-width="2" stroke-linecap="round" />
+                    d="M10.55,1571.4c73.55-42.37,157.86-70.01,238.92-93.35,211.84-61,434.93-80.15,654.51-64.87,152.79,10.64,304.2,38.21,451.56,79.79,167.48,47.25,326.97,117.58,492.13,171.91,225.94,74.33,465.63,137.33,705.41,132.47,143.48-2.91,286.17-35.13,408.19-112.88,107.39-68.43,194.28-167.13,280.47-259.53,137.52-147.44,268.49-302.65,380.24-470.73,57.13-85.92,109.47-175.72,149.67-270.91,33.76-79.94,59.99-165.37,62.57-252.7,2.29-77.64-16.99-155.06-64.07-217.75-34.21-45.55-80.34-82.91-126.46-115.74-51.41-36.59-108.34-66.61-169.45-83.21-104.16-28.29-212.61-11.27-304.6,44.59-102.51,62.24-178.87,161.45-234.84,265.88-31.69,59.14-57.32,121.36-78.36,185.03-2.86,8.65,10.77,12.35,13.61,3.75,71.07-215.03,224.09-482.49,478.73-498.49,129.26-8.12,248.82,56.64,343.92,138.92,66.27,57.33,112.87,125,124.46,213.42,10.9,83.15-6.82,167.94-33.72,246.42-32.15,93.81-78.94,182.3-130.73,266.62-106.72,173.74-236.87,332.84-373.69,483.58-51.49,56.73-104.29,112.28-158.12,166.8-39.88,40.39-80.29,80.02-126.03,113.86-108.99,80.64-237.89,123.63-372.41,135.32-219.01,19.02-441.31-29.55-650.27-90.71-74.31-21.75-147.9-45.95-220.86-71.86-82.38-29.26-163.23-62.61-245.74-91.45-150.07-52.45-305.09-90.9-462.68-112.21-231.14-31.27-468.05-25.42-696.03,25.34-112.73,25.1-226.22,59.92-329.27,112.94-4.76,2.45-9.54,4.91-14.18,7.59-7.87,4.53-.77,16.74,7.12,12.19h0Z"
+                    stroke="white" stroke-width="8" stroke-linecap="round" />
+                  <path class="draw-line"
+                    d="M5723.05,1559.21c-70.05-40.35-150.02-67.3-227.03-90.3-199.9-59.68-410.68-81.89-618.8-72.93-143.66,6.19-286.61,27.4-426.29,61.38-80.07,19.48-159.11,43.17-236.82,70.57-83.38,29.4-165.18,63.06-248.57,92.47-235.28,83-483.47,155.59-734.62,162.58-147.8,4.11-297.86-18.76-427.95-92.29-105.9-59.86-188.82-149.81-271.82-237.07-133.95-140.81-261.78-288.54-373.94-447.45-59.5-84.3-114.84-172.05-160.37-264.76-40.35-82.17-74.3-169.95-86.4-261.18-10.21-77.01-2.87-157.42,35.72-226.08,23.3-41.45,56.51-74.09,92.44-104.71,53.8-45.85,114.24-85.75,180.87-110.24,104.73-38.5,217.23-31.52,315.08,22.67,105.7,58.54,183.95,157.98,241.06,262.46,32.92,60.22,59.3,123.71,80.82,188.82,2.84,8.59,16.47,4.91,13.61-3.75-70.86-214.4-217.68-472.15-464.96-506.08-119.05-16.34-234.53,29.6-329.45,98.97-77.14,56.37-145.7,122.79-171.22,217.35-46.22,171.22,37.5,357.29,119.64,503.69,102.14,182.06,233.6,347.54,371.57,503.55,56.18,63.53,114.06,125.55,173.25,186.28,40.84,41.9,81.54,84.22,127.04,121.15,103.35,83.89,225.93,135.08,357.58,153.64,206.43,29.1,419.12-9.06,618.61-61.55,155.18-40.83,307.1-93.48,456.59-151.58,155.75-60.54,316.31-107.78,481.14-135.99,245.61-42.04,499.56-42.41,743.86,8.7,118.96,24.89,239.13,60.36,347.66,116.1,4.9,2.51,9.8,5.04,14.58,7.79,7.89,4.54,15-7.65,7.12-12.19h0Z"
+                    stroke="white" stroke-width="8" stroke-linecap="round" />
                 </svg>
               </div>
 
               <h2 class="ending-line-cinematic final-statement" data-index="4">Different is not wrong.</h2>
-            </div>
 
-            <button id="btn-restart" class="btn-restart-dark ending-line-cinematic" data-index="5" onclick="resetApp()">
-              Try Again
-            </button>
+              <button id="btn-restart" class="btn-restart-dark ending-line-cinematic" data-index="5"
+                onclick="resetApp()">
+                Try Again
+              </button>
+            </div>
           </div>
         </div>
       </div>
