Update slide 3 heading to 'Each Rhythm, Its Own Story'

--- a/Campagn/index.html
+++ b/Campagn/index.html
@@ -229,7 +229,7 @@
         <!-- PAGE 3: Zoom Into the Visitor (Formerly Slide 2) -->
         <div class="result-slide" id="slide-3">
           <div class="slide-content center-text">
-            <h2 class="fade-in-text">Different is Not Wrong.</h2>
+            <h2 class="fade-in-text">Each Rhythm, Its Own Story</h2>
             <p>Just as everyone lives<br>in different environments<br>and rhythms,</p>
 
             <div class="cluster-map-wrap" style="margin-top: 24px;">
